\name{NEWS}
\title{News for Package \pkg{inline}}
\newcommand{\ghpr}{\href{https://github.com/eddelbuettel/inline/pull/#1}{##1}}
\newcommand{\ghit}{\href{https://github.com/eddelbuettel/inline/issues/#1}{##1}}

\section{Changes in inline version 0.3.15 (2018-05-18)}{
  \itemize{
    \item Correct \code{requireNamespace()} call thanks (Alexander
    Grueneberg in \ghpr{5}).
    \item Small simplification to \code{.travis.yml}; also switch to https.
    \item Use \code{seq_along} instead of \code{seq(along=...)} (Watal
    M. Iwasaki) in \ghpr{6}).
    \item Update package manual page using references to
    \code{DESCRIPTION} file [CRAN request].
    \item Minor packaging updates.
  }
}

\section{Changes in inline version 0.3.14 (2015-04-11)}{
  \itemize{
    \item Removed call to \code{Rcpp::RcppLdFlags()} which is no longer needed
    \item With move of repository to GitHub, added a \code{.travis.yml}
    file and corresponding entry in \code{.Rbuildignore}
    \item Replaced calls to \code{require()} with calls to
    \code{requireNamespace()}; also updated one call
    \item Much improved support for Fortran and Fortran95 thanks to
      Karline Soetaert who became a package co-author
    \item New helper functions \code{writeDynLib} and \code{readDynLib}
      as well as new methods \code{print} and \code{code} (also by Karline)
  }
}

\section{Changes in inline version 0.3.13 (2013-08-08)}{
  \itemize{
    \item Applied contributed patch by Mikhail Umorin which corrects
    \code{cfunction()} in the case of a \code{list} of signature and
    body arguments.
  }
}

\section{Changes in inline version 0.3.12 (2013-06-12)}{
  \itemize{
    \item Align \code{package.skeleton} with the R-devel version of the
    function which no longer has a \code{NAMESPACE} argument. 
    \item Remove copy of LGPL in source archive as \code{R CMD check}
    now complains about it. License status continues to be specified in
    file \code{DESCRIPTION}.
  }
}
