@@ -1,14 +1,14 @@
-031e12db6337df75e0ecd4ae8f99584d *DESCRIPTION
-95ca9be045875c664e131c24a67c6d1a *NAMESPACE
-ba41aceba4a4eaa576d31c66a8716539 *R/cfunction.R
+54c53e55ac32f46ef7bc11d39c967493 *DESCRIPTION
+acb01a354fa4c74771a494262ec731a5 *NAMESPACE
+d1e6182545ffed972cfba40480631406 *R/cfunction.R
 3661ee24e0f177e278d23dc97797e056 *R/cmethods.R
 ab9db57362e717900c85751f401727dd *R/cxxfunction.R
 7e32cd42ac56d4e281a1fe82b38738a7 *R/getDynLib.R
 b060d5e5093bf71dd36ba4ca26001cac *R/package.skeleton.R
 0ff2d922761c7431a93e590fb88ac727 *R/utilities.R
-a8a2ee026398b29ee33954f3ff7dbc7e *README.md
-c12101ec3fcda9f9c9fc7a40ad5b4f2b *build/partial.rdb
-013b6e1647bab5b96caff77c865efbcb *inst/NEWS.Rd
+60051991ed71c83a5ced7369724d6bb5 *README.md
+2e6fb7a9a9a11667eb01fbc6e64948d5 *build/partial.rdb
+45ac80fac9fe765e706c67f5ec244598 *inst/NEWS.Rd
 d208cc9df3d3ada1ea8e854868e3c814 *man/cfunction.Rd
 601bf59c3a06707ae4084c79f9b49aad *man/cxxfunction.Rd
 18b89221354bc68a777c5ea418e6efbe *man/getDynLib.Rd
