@@ -1,5 +1,5 @@
 import("methods")
-importFrom("utils", "package.skeleton")
+importFrom("utils", "package.skeleton", "tail")
 
 export(
     "cfunction",
