@@ -1,22 +1,31 @@
-## Inline C, C++ or Fortran calls in R
+## inline: Inline C, C++ and Fortran code from R
 
-[![Build Status](https://travis-ci.org/eddelbuettel/inline.png)](https://travis-ci.org/eddelbuettel/inline)
+[![Build Status](https://travis-ci.org/eddelbuettel/inline.png)](https://travis-ci.org/eddelbuettel/inline) 
+[![License](https://img.shields.io/badge/license-LGPL%20%28%3E%3D%202%29-brightgreen)](https://www.gnu.org/licenses/lgpl-3.0.html) 
+[![CRAN](https://www.r-pkg.org/badges/version/inline)](https://cran.r-project.org/package=inline) 
+[![Dependencies](https://tinyverse.netlify.com/badge/inline)](https://cran.r-project.org/package=inline) 
+[![Downloads](https://cranlogs.r-pkg.org/badges/inline?color=brightgreen)](https://www.r-pkg.org/pkg/inline) 
+[![Debian package](https://img.shields.io/debian/v/r-cran-inline/sid?color=brightgreen)](https://packages.debian.org/sid/r-cran-inline)
+[![Last Commit](https://img.shields.io/github/last-commit/eddelbuettel/inline)](https://github.com/eddelbuettel/inline)
+
+### About
 
 The inline package provides functionality to dynamically define R functions
 (and corresponding S4 objects) from in-line C, C++ or Fortran code. It
-supports both the `.C` and `.Call` calling conventions.
+supports the `.C`, `.Call` and `.Fortran` calling conventions.
 
-## History
+### History
 
 The package was originally written while Oleg Sklyar was at
-[EMBL-EBI](http://www.ebi.ac.uk/).  It was later extended by Dirk
-Eddelbuettel and Romain Francois extended for use by
-[Rcpp](http://dirk.eddelbuettel.com/code/rcpp.html).
+[EMBL-EBI](https://www.ebi.ac.uk/).  It was then extended by Dirk
+Eddelbuettel and Romain Francois for use by
+[Rcpp](https://dirk.eddelbuettel.com/code/rcpp.html). Karline Soetaert added
+support for Fortran.
 
-## Authors
+### Authors
 
-Oleg Sklyar, Dirk Eddelbuettel, Romain Francois
+Oleg Sklyar, Dirk Eddelbuettel, Romain Francois, Karline Soetaert
 
-## License
+### License
 
 LGPL (>= 2)
